Prevented side scrollbar appearing due to parallax images

--- a/style.css
+++ b/style.css
@@ -7,6 +7,7 @@
 
 body {
     background-color: #000;
+    overflow-x: hidden;  /* Required to prevent side scroll bar appearing due to parallax image bar. */
 }
 
 /* ------------------ OPENING VIDEO ---------------------- */
